# ArcaneLog

./: .gitignore  ArcaneLog.vcxproj  ArcaneLog.vcxproj.filters  CMakeLists.txt  ChaosLog.vcxproj  ChaosLog.vcxproj.filters  README.md  semver  sigma.py  w_built.bat
docs/doxygen/: config  customdoxygen.css  header.html
ext/ChaosCore/include/chaoscore/base/: Exceptions.hpp  Preproc.hpp  Types.hpp
ext/ChaosCore/include/chaoscore/base/data/: BinaryOperations.hpp  BitwiseFloat.hpp  ByteOperations.hpp
ext/ChaosCore/include/chaoscore/base/math/: MathOperations.hpp
ext/ChaosCore/include/chaoscore/base/str/: StringConstants.hpp  StringOperations.hpp  UTF8String.hpp
ext/ChaosCore/include/chaoscore/gfx/: Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorOperations.hpp
ext/ChaosCore/include/chaoscore/io/format/: ANSI.hpp  FormatOperations.hpp
ext/ChaosCore/include/chaoscore/io/sys/: FileHandle.hpp  FileReader.hpp  FileSystemOperations.hpp  FileWriter.hpp
ext/ChaosCore/include/chaoscore/test/: TestLogger.hpp
ext/ChaosCore/include/chaoscore/test/log_formatter/: AbstractTestLogFormatter.hpp  HTMLTestLogFormatter.hpp  PlainTestLogFormatter.hpp  PrettyTestLogFormatter.hpp  XMLTestLogFormatter.hpp
src/cpp/arcanelog/: AbstractOutput.cpp  Input.cpp  LogHandler.cpp  LogHandler.hpp  Logging.cpp  Logging.hpp  Shared.cpp  Shared.hpp  Stream.cpp
src/cpp/arcanelog/outputs/: FileOutput.cpp  FileOutput.hpp  StdOutput.cpp  StdOutput.hpp
src/cxx/chlog/: AbstractOutput.cpp  AbstractOutput.hpp  Input.cpp  Input.hpp  LogHandler.cpp  LogHandler.hpp  Logging.cpp  Logging.hpp  Profile.hpp  StdOutput.cpp  StdOutput.hpp  Stream.cpp  Stream.hpp  Verbosity.hpp
src/cxx/chlog/outputs/: FileOutput.cpp  StdOutput.cpp  StdOutput.hpp
tests/cpp/: Logging_TestSuite.cpp  TestsMain.cpp
tests/cxx/: Logging_TestSuite.cpp  TestsMain.cpp
tools/: deploy.py  w_build.bat
